--- a/carousel/stye.css
+++ b/carousel/stye.css
@@ -4,6 +4,16 @@ body {
   padding: 0;
 }
 
+/* nav bar */
+.navbar {
+  position: fixed;
+  width: 100%;
+  z-index: 5;
+}
+
+.brand-size {
+  font-size: 30px;
+}
 .slide-container {
   width: 300vw;
   transition: all 1s;
