--- a/carousel/stye.css
+++ b/carousel/stye.css
@@ -16,7 +16,8 @@ body {
   transition: all 1s;
 }
 .status {
-  height: 5px;
+  width: 0;
+  height: 4px;
   background-color: salmon;
   position: fixed;
   top: 60px;
