--- a/carousel/stye.css
+++ b/carousel/stye.css
@@ -24,6 +24,10 @@ body {
   z-index: 5;
   /* width: 100%; */
 }
+
+.show-modal {
+  display: block;
+}
 .slide-container {
   width: 300vw;
   transition: all 1s;
